WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276446
REGRESSION (
275629@main
): [Pagination] Huge vertical space on some books pages with widows
https://bugs.webkit.org/show_bug.cgi?id=276446
Summary
REGRESSION (275629@main): [Pagination] Huge vertical space on some books page...
zalan
Reported
2024-07-10 14:08:43 PDT
<
rdar://130783404
>
Attachments
Patch
(7.49 KB, patch)
2024-07-10 14:16 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.05 KB, patch)
2024-07-10 14:55 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2024-07-10 14:16:27 PDT
Created
attachment 471864
[details]
Patch
zalan
Comment 2
2024-07-10 14:55:12 PDT
Created
attachment 471865
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-11 05:23:08 PDT
Committed
280856@main
(cfba0b14d628): <
https://commits.webkit.org/280856@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471865
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug