[Pagination] Huge vertical space on some books pages with widows https://bugs.webkit.org/show_bug.cgi?id=276446 <rdar://130783404>

Reviewed by Antti Koivisto.

We use _accumulated_ offset to restart partial inline layout to deal with widows/orphans
which makes the start position of the "new content" incorrect when we arrive to this windows/orphans restart through multiple pages.

The fix is to keep track of the _actual_ offset where the new content is supposed to start taking widows/orphans into account.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::adjustContentForPagination):
* Source/WebCore/layout/integration/inline/LayoutIntegrationPagination.cpp:
(WebCore::LayoutIntegration::computeAdjustmentsForPagination):
* Source/WebCore/layout/integration/inline/LayoutIntegrationPagination.h:

Canonical link: https://commits.webkit.org/280856@main